début adaptation java 11